<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_set_lang"
        android:orderInCategory="100"
        android:title="@string/set_lang"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_marathi_lang_set"
                android:orderInCategory="100"
                android:title="@string/set_lang_to_marathi"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_english_lang_set"
                android:orderInCategory="100"
                android:title="@string/set_lang_to_english"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_hindi_lang_set"
                android:orderInCategory="100"
                android:title="@string/set_lang_to_hindi"
                app:showAsAction="never"/>
        </menu>
    </item>
    <item
        android:id="@+id/play_all"
        android:icon="@drawable/playios"
        android:title="@string/play_all"
        app:showAsAction="always" />
</menu>