<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.whitebird.DevotionalGallery.ClsFullFragmentAllocCenter">
    <item
        android:id="@+id/action_alarm"
        android:orderInCategory="100"
        android:title="@string/action_alarm"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/set_ringtone"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/contact_us"
        android:orderInCategory="100"
        android:title="@string/contact_us"
        app:showAsAction="never"
        tools:ignore="AppCompatResource"/>

</menu>